syntax = "proto2";

message AppData {
  optional bool onboarded = 1;
  optional bool onboardedAccessibilitySettings = 2;
  optional DrawingMode drawingMode = 3;
  optional float overlayAreaSize = 4;
  optional float overlaySpeed = 5;
}

enum DrawingMode {
  NONE = 0;
  DRAW_OVER_OTHER_APPS = 1;
  ACCESSIBILITY_SERVICE = 2;
}